Debug logginf for quiz, try to catch bug

--- a/src/uLearn.Web/Views/Course/LtiQuizSlide.cshtml
+++ b/src/uLearn.Web/Views/Course/LtiQuizSlide.cshtml
@@ -13,7 +13,15 @@
 <body class="lti-component">
 	@if (Model != null)
 	{
-		@Html.Action("Quiz", "Quiz", new { slide = Model.Slide, courseId = Model.CourseId, userId = Model.UserId, isLti = true, isGuest = false });
+		@Html.Action("Quiz", "Quiz", new
+           {
+               slide = Model.Slide,
+               courseId = Model.CourseId,
+               userId = Model.UserId,
+               isLti = true,
+               isGuest = false,
+               manualQuizCheckQueueItem = (ManualQuizChecking) null,
+           })
 		@Scripts.Render("~/main-js")
 	}
 </body>
