--- a/src/uLearn.Web/Views/Shared/_Layout.cshtml
+++ b/src/uLearn.Web/Views/Shared/_Layout.cshtml
@@ -1,13 +1,12 @@
 ﻿@using uLearn
-@using uLearn.Web.DataContexts
 @using uLearn.Web.Extensions
 <!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>@ViewBag.Title | uLearn</title>
-	<meta name="title" content="uLearn" />
+	<title>@ViewBag.Title &bull; ulearn</title>
+	<meta name="title" content="@ViewBag.Title на ulearn.me" />
 	<meta name="description" content="Интерактивные учебные онлайн курсы по программированию" />
 	<link rel="image_src" href="~/Content/logo.png">
 	<link rel="shortcut icon" href="~/favicon.ico?v=4" />
