--- a/src/CourseTool/templates/iframe.html
+++ b/src/CourseTool/templates/iframe.html
@@ -1,1 +1,1 @@
-﻿<iframe scrolling="no" src="/static/{0}.html" width="100%" frameborder="no" onload="{1}"></iframe>
+﻿<iframe scrolling="no" src="/assets/{0}.html" width="100%" frameborder="no" onload="{1}"></iframe>
