CourseTool:   * Remove Download / Upload edx course   * + EmitSequentialsForInstructorNotes   * Squash / Desquash olx chapters commands

--- a/src/CourseTool/templates/config.xml
+++ b/src/CourseTool/templates/config.xml
@@ -19,6 +19,7 @@
 		<SlideId>2</SlideId>
 		-->
 	</IgnoredUlearnSlides>
+	<EmitSequentialsForInstructorNotes>false</EmitSequentialsForInstructorNotes>
 	<!-- Here you can set up your profiles -->
 	<Profiles>
 		<!-- the 'default' profile will be used when patching/converting if not specified -->
