--- a/src/uLearn.Web/Views/Admin/Comments.cshtml
+++ b/src/uLearn.Web/Views/Admin/Comments.cshtml
@@ -1,5 +1,4 @@
-﻿@using ApprovalUtilities.Utilities
-@using uLearn.Web.Extensions
+﻿@using uLearn.Web.Extensions
 @model uLearn.Web.Controllers.AdminCommentsViewModel
 
 @{
