--- a/src/uLearn.Web/Views/Admin/Certificates.cshtml
+++ b/src/uLearn.Web/Views/Admin/Certificates.cshtml
@@ -1,4 +1,5 @@
-﻿@using uLearn
+﻿@using Microsoft.AspNet.Identity
+@using uLearn
 @using uLearn.Web.Extensions
 @model uLearn.Web.Controllers.CertificatesViewModel
 
@@ -88,6 +89,15 @@
 							@Html.RouteLink(certificate.User.VisibleName, "Certificate", new { certificateId = certificate.Id }),
 						</b>
 						выдан @certificate.Instructor.VisibleName @certificate.Timestamp.ToAgoPrettyString()
+
+						@if (User.HasAccessFor(Model.Course.Id, CourseRole.CourseAdmin) ||
+							 certificate.InstructorId == User.Identity.GetUserId())
+						{
+							<span class="glyphicon glyphicon-remove  remove-certificate-link  text-danger visible-on-parent-hover  cursor-pointer"
+							  data-certificate-id="@certificate.Id"
+							  data-url="@Url.Action("Remove", "Certificates")"
+							  title="Отозвать сертификат"></span>
+						}
 					</div>
 				}
 			</div>
