--- a/src/uLearn.Web/Views/Certificates/Certificate.cshtml
+++ b/src/uLearn.Web/Views/Certificates/Certificate.cshtml
@@ -5,3 +5,32 @@
 }
 
 @Html.Raw(Model.RenderedCertificate)
+
+@if (Model.Certificate.IsPreview)
+{
+	<style>
+		.__ulearn__preview-certificate__warning {
+			display: block;
+			position: absolute;
+			top: 0;
+			left: 0;
+			background-color: midnightblue;
+			color: white;
+			padding: 10px;
+			font-family: Arial;
+			font-size: 15px;
+			line-height: 19px;
+		}
+
+		.__ulearn__preview-certificate__warning a {
+			color: inherit;
+		}
+	</style>
+	<div class="__ulearn__preview-certificate__warning">
+		<b>Внимание</b>. Это предпосмотр сертификата, он доступен только преподавателям.
+		Чтобы выпустить настоящий сертификат, вернитесь
+		@Html.ActionLink("на страницу с сертификатами", "Certificates", "Admin", new { courseId = Model.Course.Id }, new {})
+		и&nbsp;нажмите «Выдать сертификат».
+		<a href="#" onclick="this.parentNode.style.display = 'none'; return false;">Закрыть</a>
+	</div>
+}
