--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -58,9 +58,9 @@ p {
 }
 
 .internal-page-link.active {
-    border-bottom: none;
-    font-weight: bold;
-    pointer-events: none;
+	border-bottom: none;
+	font-weight: bold;
+	pointer-events: none;
 }
 
 .internal-page-link.active:not(.text-muted) {
@@ -72,19 +72,19 @@ p {
 }
 
 .inline-select {
-    border-width: 0;
-    padding: 0;
-    box-shadow: inset 0px 0px;
-    border-bottom: 1px dashed #2a6496;
-    margin: 0;
-    height: auto;
-    cursor: pointer;
-    color: #2a6496;
-    max-width: none;
+	border-width: 0;
+	padding: 0;
+	box-shadow: inset 0px 0px;
+	border-bottom: 1px dashed #2a6496;
+	margin: 0;
+	height: auto;
+	cursor: pointer;
+	color: #2a6496;
+	max-width: none;
 }
 
 .inline-select:focus {
-    outline: none;
+	outline: none;
 }
 
 .clipboard-link {
@@ -195,9 +195,9 @@ p {
 
 .run-review-status {
 	color: white;
-    text-align: center;
-    font-size: 13pt;
-    padding: 2px 0;
+	text-align: center;
+	font-size: 13pt;
+	padding: 2px 0;
 }
 
 .no-rounds {
@@ -411,7 +411,7 @@ p {
 .quiz-status,
 .exercise-status,
 .exercise-loading {
-    background-color: #d9edf7;
+	background-color: #d9edf7;
 	padding: 15px 18px;
 	color: #333;
 	font-size: 13pt;
@@ -420,8 +420,8 @@ p {
 
 .exercise-status,
 .exercise-loading {
-    margin-bottom: 0;
-    margin-top: 10px;
+	margin-bottom: 0;
+	margin-top: 10px;
 }
 
 .exercise-status.wrong {
@@ -882,15 +882,15 @@ li.li-success {
 .login-and-registration-form input[type=text],
 .login-and-registration-form input[type=password] {
 	border-width: 2px;
-    padding: 10px 16px;
-    height: 50px;
-    font-size: 16px;
+	padding: 10px 16px;
+	height: 50px;
+	font-size: 16px;
 }
 
 .login-and-registration-form .field-validation-error {
 	display: inline-block;
 	padding: 4px 16px 4px;
-    color: #E46463;
+	color: #E46463;
 }
 
 .login-and-registration-form .input-validation-error {
@@ -898,14 +898,14 @@ li.li-success {
 }
 
 .login-and-registration-form .validation-summary-errors {
-    color: #FFFCFC;
-    border: 2px solid #EA8180;
-    border-radius: 6px;
-    background-color: #EA8180;
-    text-align: left;
-    padding: 10px 16px 0;
-    font-size: 16px;
-    margin-bottom: 15px;
+	color: #FFFCFC;
+	border: 2px solid #EA8180;
+	border-radius: 6px;
+	background-color: #EA8180;
+	text-align: left;
+	padding: 10px 16px 0;
+	font-size: 16px;
+	margin-bottom: 15px;
 }
 
 .login-and-registration-form .checkbox label::before {
@@ -916,35 +916,35 @@ li.li-success {
 /* Account page */
 #externalLogins #socialLoginList .ph-btn {
 	padding: 6px 40px 5px;
-    display: inline-block;
-    width: auto;
-    font-weight: normal;
-    font-size: 14px;
+	display: inline-block;
+	width: auto;
+	font-weight: normal;
+	font-size: 14px;
 }
 
 
 /* Strike line */
 .strike-line {
-    display: block;
-    text-align: center;
-    overflow: hidden;
-    white-space: nowrap;
+	display: block;
+	text-align: center;
+	overflow: hidden;
+	white-space: nowrap;
 	margin-bottom: 10px;
 }
 
 .strike-line > span {
-    position: relative;
-    display: inline-block;
+	position: relative;
+	display: inline-block;
 	font-style: italic;
 }
 
 .strike-line > span:before,
 .strike-line > span:after {
-    content: "";
-    position: absolute;
-    top: 50%;
-    width: 9999px;
-    height: 1px;
+	content: "";
+	position: absolute;
+	top: 50%;
+	width: 9999px;
+	height: 1px;
 }
 
 .strike-line.grey > span:before,
@@ -956,17 +956,17 @@ li.li-success {
 }
 
 .strike-line > span:before {
-    right: 100%;
-    margin-right: 10px;
+	right: 100%;
+	margin-right: 10px;
 }
 
 .strike-line > span:after {
-    left: 100%;
-    margin-left: 10px;
+	left: 100%;
+	margin-left: 10px;
 }
 
 .quiz-block-mark .quiz label {
-    white-space: pre-wrap;
+	white-space: pre-wrap;
 }
 
 /* Ordering quizes */
@@ -997,10 +997,10 @@ li.li-success {
 	cursor: pointer;
 	color: #69c;
 	
-    height: 100%;
-    position: absolute;
-    right: 6px;
-    top: 9px;
+	height: 100%;
+	position: absolute;
+	right: 6px;
+	top: 9px;
 }
 
 .quiz-block-ordering:not(.not-movable) .quiz-block-ordering__item .text {
@@ -1079,28 +1079,28 @@ li.li-success {
 .quiz-block-matching__item.right .quiz-block-matching__fixed-item:not(:last-child),
 .quiz-block-matching__item.right .quiz-block-matching__movable-item {
 	background-color: #E1FFE1;
-    border-color: #B9E6B9;
+	border-color: #B9E6B9;
 	color: black;
 }
 
 .quiz-block-matching__item.wrong .quiz-block-matching__fixed-item:not(:last-child),
 .quiz-block-matching__item.wrong .quiz-block-matching__movable-item {
 	background-color: #FFE1E1;
-    border-color: #E6B9B9;
+	border-color: #E6B9B9;
 	color: black;
 }
 
 .quiz-block-ordering .quiz-block-ordering__item.correct,
 .quiz-block-matching .quiz-block-matching__fixed-item.correct {
-    background-color: #82D082;
-    border-color: #71BB71;
-    color: white;
+	background-color: #82D082;
+	border-color: #71BB71;
+	color: white;
 }
 
 .quiz-block-ordering__correct-description,
 .quiz-block-matching__correct-description {
 	padding-bottom: 8px;
-    font-size: 13pt;
+	font-size: 13pt;
 }
 
 .quiz-block-matching__correct-description {
@@ -1206,15 +1206,15 @@ table.analytics__user-answers {
 .analytics__dashboard .stat-title,
 .analytics__dashboard .small-table__right-cell
  {
-    width: 50px;
-    display: inline-block;
-    text-align: right;
+	width: 50px;
+	display: inline-block;
+	text-align: right;
 }
 
 .analytics__dashboard .small-table__title {
-    border-top: 1px solid #ccc;
-    border-bottom: 1px solid #ccc;
-    padding: 0 0 2px;
+	border-top: 1px solid #ccc;
+	border-bottom: 1px solid #ccc;
+	padding: 0 0 2px;
 	margin-bottom: 3px;
 }
 
@@ -1274,8 +1274,8 @@ table.analytics__user-answers {
 }
 
 .analytics__dashboard .large-number {
-    text-align: center;
-    font-size: 40pt;
+	text-align: center;
+	font-size: 40pt;
 }
 
 .analytics__dashboard .large-number__text {
@@ -1308,9 +1308,9 @@ table.analytics__user-answers {
 	position: absolute;
 	z-index: 10;
 	background-color: white;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 3px;
+	padding: 10px;
+	border: 1px solid #ccc;
+	border-radius: 3px;
 	width: 520px;
 }
 
@@ -1343,8 +1343,8 @@ table.analytics__user-answers {
 
 .exercise__top-review-comments .comment {
 	white-space: nowrap;
-    text-overflow: ellipsis;
-    overflow: hidden;
+	text-overflow: ellipsis;
+	overflow: hidden;
 }
 
 .code-review + .CodeMirror {
@@ -1352,8 +1352,8 @@ table.analytics__user-answers {
 }
 
 .exercise__reviews {
-    float: right;
-    width: 250px;
+	float: right;
+	width: 250px;
 	margin-left: 10px;
 	margin-bottom: 25px;
 }
@@ -1364,8 +1364,8 @@ table.analytics__user-answers {
 
 .exercise__review {
 	border-left: 3px solid #fdd;
-    margin: 10px 0;
-    padding: 2px 5px;
+	margin: 10px 0;
+	padding: 2px 5px;
 	cursor: pointer;
 }
 
@@ -1376,11 +1376,11 @@ table.analytics__user-answers {
 }
 
 .exercise__review .exercise__review__header {
-    background-color: #fdf5f5;
-    margin: -2px -5px;
-    padding: 2px 5px;
-    color: #aaa;
-    font-size: 9pt;
+	background-color: #fdf5f5;
+	margin: -2px -5px;
+	padding: 2px 5px;
+	color: #aaa;
+	font-size: 9pt;
 }
 
 .exercise__review .exercise__review__header .author {
@@ -1392,7 +1392,7 @@ table.analytics__user-answers {
 }
 
 .exercise__review .exercise__review__comment {
-    padding: 4px 0;
+	padding: 4px 0;
 }
 
 .exercise__code__reviewed-fragment {
@@ -1405,7 +1405,7 @@ table.analytics__user-answers {
 
 /* Exercise */
 .exercise__submissions-panel {
-    margin-bottom: 15px;
+	margin-bottom: 15px;
 }
 
 .exercise__submissions-panel .inline-select {
@@ -1439,10 +1439,10 @@ table.analytics__user-answers {
 .exercise__score .status.success { color: #2ca02b }
 
 #exercise__submission__output {
-    margin-top: 10px;
-    font-family: monospace;
-    border-left: 4px solid #8c8c8c;
-    padding-left:  10px;
+	margin-top: 10px;
+	font-family: monospace;
+	border-left: 4px solid #8c8c8c;
+	padding-left:  10px;
 }
 
 #exercise__submission__output::before {
@@ -1556,11 +1556,12 @@ table.analytics__user-answers {
 
 /* Certificates editor */
 .certificate-template__parameter,
-.add-certificate-button {
-    display: none;
+.add-certificate-button,
+.preview-certificate-button {
+	display: none;
 }
 
 .certificates {
-    margin: 15px 0;
+	margin: 15px 0;
 }
 /* End of certificates editor */
