--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -44,6 +44,10 @@ p {
 	margin: 0;
 }
 
+.breathing-page-header {
+	margin: 35px -3px 18px 0;
+}
+
 .internal-page-link,
 .internal-page-link:hover,
 .internal-page-link:focus,
@@ -1554,7 +1558,7 @@ table.analytics__user-answers {
 	padding: 30px 0;
 }
 
-/* Certificates editor */
+/* Certificates */
 .certificate-template__parameter,
 .add-certificate-button,
 .preview-certificate-button {
@@ -1564,4 +1568,8 @@ table.analytics__user-answers {
 .certificates {
 	margin: 15px 0;
 }
-/* End of certificates editor */
+
+.certificates-list__info {
+	padding: 10px 0;
+}
+/* End of certificates */
