--- a/src/uLearn.Web/Views/Shared/_LoginPartial.cshtml
+++ b/src/uLearn.Web/Views/Shared/_LoginPartial.cshtml
@@ -1,23 +1,34 @@
 ﻿@using Microsoft.AspNet.Identity
+@using uLearn.Web.Extensions
 
 @if (Request.IsAuthenticated)
 {
-    using (Html.BeginForm("LogOff", "Login", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
-    {
+	using (Html.BeginForm("LogOff", "Login", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
+	{
 		@Html.AntiForgeryToken()
+		var profileMenuTitle = User.Identity.GetUserVisibleName();
+		if (string.IsNullOrEmpty(profileMenuTitle))
+		{
+			profileMenuTitle = "Меню";
+		}
 
 		<ul class="nav navbar-nav navbar-right">
-			<li>
-				@Html.ActionLink(User.Identity.GetUserName(), "Manage", "Account", routeValues: null, htmlAttributes: new { title = "Редактировать профиль", @class = "greating" })
+			<li class="dropdown">
+				<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">@profileMenuTitle <span class="caret"></span></a>
+				<ul class="dropdown-menu">
+					<li>@Html.ActionLink("Профиль", "Manage", "Account", null, new { title = "Редактировать профиль" })</li>
+					<li>@Html.ActionLink("Сертификаты", "Index", "Certificates", new { userId = User.Identity.GetUserId() }, new {})</li>
+					<li><a href="#" onclick="document.getElementById('logoutForm').submit(); return false;">Выход</a></li>
+				</ul>
 			</li>
-			<li><a href="javascript:document.getElementById('logoutForm').submit()">Выход</a></li>
+			
 		</ul>
-    }
+	}
 }
 else
 {
-    <ul class="nav navbar-nav navbar-right">
-        <li>@Html.ActionLink("Регистрация", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
-        <li>@Html.ActionLink("Вход", "Index", "Login", routeValues: new { returnUrl = Request.RawUrl }, htmlAttributes: new { id = "loginLink" })</li>
-    </ul>
+	<ul class="nav navbar-nav navbar-right">
+		<li>@Html.ActionLink("Регистрация", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
+		<li>@Html.ActionLink("Вход", "Index", "Login", routeValues: new { returnUrl = Request.RawUrl }, htmlAttributes: new { id = "loginLink" })</li>
+	</ul>
 }
