--- a/src/uLearn.Web/Views/Shared/_Layout.cshtml
+++ b/src/uLearn.Web/Views/Shared/_Layout.cshtml
@@ -6,7 +6,9 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>@ViewBag.Title &bull; ulearn</title>
-	<meta name="title" content="@ViewBag.Title на ulearn.me" />
+	<meta name="title" content="@ViewBag.Title на ulearn.me"/>
+	<meta name="og:title" content="@ViewBag.Title на ulearn.me"/>
+	<meta name="og:image" content="~/Content/logo.png" />
 	<meta name="description" content="Интерактивные учебные онлайн курсы по программированию" />
 	<link rel="image_src" href="~/Content/logo.png">
 	<link rel="shortcut icon" href="~/favicon.ico?v=4" />
