--- a/src/uLearn.Web/Views/Shared/_Layout.cshtml
+++ b/src/uLearn.Web/Views/Shared/_Layout.cshtml
@@ -82,7 +82,7 @@
 						@Html.Action("CourseInstructorNavbar", "Course", new { courseId })
 					}
 				</ul>
-				@Html.Partial("_LoginPartial")
+				@Html.Action("UserMenuPartial", "Account")
 			</div>
 		</div>
 	</div>
