Don't show rendered certificate after issue
Order templates after creation time descending

--- a/src/uLearn.Web/Views/Admin/Certificates.cshtml
+++ b/src/uLearn.Web/Views/Admin/Certificates.cshtml
@@ -32,9 +32,9 @@
 		}
 	}
 
-	@foreach (var template in Model.Templates.Values)
+	@foreach (var template in Model.Templates.Values.OrderByDescending(t => t.Timestamp))
 	{
-		<div class="certificate-template">
+		<div class="certificate-template" id="template-@template.Id">
 			<h3 class="certificate-template__title">
 				@if (canEditTemplates)
 				{
