--- a/src/uLearn.Web/Views/Admin/Certificates.cshtml
+++ b/src/uLearn.Web/Views/Admin/Certificates.cshtml
@@ -189,17 +189,17 @@
 							Чтобы сгенерировать сразу много сертификатов, подготовьте CSV-файл с данными.
 						</p>
 						<p>
-							Вот пример такого файла:
+							Пример такого файла:
 							<pre>Фамилия Имя,mark,instructor_notes
 Иванов Иван,отлично,
-Петров Петр,хорошо,Учился неплохо, но мог лучше</pre>
+Петров Петр,хорошо,"Учился неплохо, но мог лучше"</pre>
 						</p>
 						<p>
-							В первой строке файла должны находиться заголовки столбцов.
+							В первой строке должны находиться заголовки столбцов.
 							Столбец с фамилией и именем студента должен называться «Фамилия Имя».
-							Кроме того, должны существовать столбцы для каждой из подстановки в шаблоне (в данном случае
+							Кроме того должны существовать столбцы для каждой из подстановки в шаблоне (в данном случае
 							это mark и instructor_notes&nbsp;— на значения из этих столбцов заменятся подстановки
-							%mark% и %instructor_notes% в шаблоне сертификата).
+							%mark% и %instructor_notes% в сертификате).
 							<br/><em>Остальные столбцы будут проигнорированы.</em>
 						</p>
 						<p>
