--- a/src/uLearn.Web/Views/Admin/GenerateCertificatesError.cshtml
+++ b/src/uLearn.Web/Views/Admin/GenerateCertificatesError.cshtml
@@ -4,10 +4,12 @@
 	ViewBag.Title = Model;
 }
 
-<h1>
-	Генерация сертификатов
-</h1>
+<div class="container">
+	<h1>
+		Генерация сертификатов
+	</h1>
 
-<h3 class="error">
-	@Model
-</h3>
+	<div class="alert alert-danger">
+		Ошибка: <strong>@Model</strong>. <a href="javascript:history.back()">Вернитесь назад</a> и попробуйте ещё раз.
+	</div>
+</div>
