Large refactoring: units are independed. Introduce Unit.xml with Id, Url and Title of unit.
Add scoring groups definition
Change course loading process
From now InstructorNote is a part of Unit
Add CourseLoadingException, throw it if there is any course loading errors

--- a/src/uLearn.Web/Views/Account/CourseInfo.cshtml
+++ b/src/uLearn.Web/Views/Account/CourseInfo.cshtml
@@ -19,7 +19,7 @@
 		@foreach (var unit in Model.Units)
 		{
 			<tr style="text-align: center">
-				<td style="text-align: left">@unit.UnitName</td>
+				<td style="text-align: left">@unit.Unit.Title</td>
 				<td title="@unit.SlideVisits.Earned of @unit.SlideVisits.Total">@unit.SlideVisits</td>
 				<td title="@unit.Exercises.Earned of @unit.Exercises.Total">@unit.Exercises</td>
 				<td title="@unit.Quizes.Earned of @unit.Quizes.Total">@unit.Quizes</td>
